--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
@@ -89,13 +89,13 @@
     
 
     <!-- ======= Values Section ======= -->
-    <!-- <section id="values" class="values">
+    <section id="values" class="values">
 
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Our Values</h2>
-          <p>Odit est perspiciatis laborum et dicta</p>
+          <h2>What we offer</h2>
+          <p>Content Management Made Easy</p>
         </header>
 
         <div class="row">
@@ -103,24 +103,26 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="box">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
-              <h3>Ad cupiditate sed est odio</h3>
-              <p>Eum ad dolor et. Autem aut fugiat debitis voluptatem consequuntur sit. Et veritatis id.</p>
+              <h3>Core Idea</h3>
+              <p>We offer content management services to MathU by shortening the content creation processes
+                while making other processes multifunctional with the help of software. We also help
+                maintain a high level of content quality.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
             <div class="box">
-              <img src="assets/img/values-2.png" class="img-fluid" alt="">
-              <h3>Voluptatem voluptatum alias</h3>
-              <p>Repudiandae amet nihil natus in distinctio suscipit id. Doloremque ducimus ea sit non.</p>
+              <img src="assets/img/polynomial.jpg" class="img-fluid" alt="">
+              <h3>Standardisation of Images</h3>
+              <p>We help MathU content managers to maintain a set standard for their images, in terms of image quality, and size. The images used are solutions to mathematical graphing problems</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
             <div class="box">
-              <img src="assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Fugit cupiditate alias nobis.</h3>
-              <p>Quam rem vitae est autem molestias explicabo debitis sint. Vero aliquid quidem commodi.</p>
+              <img src="assets/img/ai2.jpg" class="img-fluid" alt="">
+              <h3>Classification and Storage</h3>
+              <p>Our system recognizes the tyoes of graph images uploaded, aiding in the storage of these different images based on their classification</p>
             </div>
           </div>
 
@@ -128,7 +130,7 @@
 
       </div>
 
-    </section> -->
+    </section>
     <!-- End Values Section -->
 
     
@@ -339,7 +341,7 @@
               </div>
               <div class="member-info">
                 <h4>Omolemo Mashigo</h4>
-                <span>Chief Executive Officer</span>
+                <span>Team Leader</span>
                 <p>I pride myself with being an all-rounder, who’s a very fast learner. I am well-organized and dedicated and I am willing to learn whatever language or framework needed to meet any project requirements. I aspire to be a decent full-stack developer, but I am currently more skilled in back-end development.</p>
               </div>
             </div>
@@ -356,7 +358,7 @@
               </div>
               <div class="member-info">
                 <h4>Mohammed Moola</h4>
-                <span>Product Manager</span>
+                <!-- <span>Product Manager</span> -->
                 <p>I am a hardworking, ambitious student who is passionate about the field I am in. I have worked on a contract job for web application integration, therefore I have experience in the working world. I believe it will translate positively in approaching this project, in dealing with my team and conducting myself professionally. I have experience with front-end  as well as dealing with API's.</p>
               </div>
             </div>
@@ -373,7 +375,7 @@
               </div>
               <div class="member-info">
                 <h4>Emmanuel Khoza</h4>
-                <span>CTO</span>
+                <!-- <span>CTO</span> -->
                 <p>I am currently working as a junior software developer therefore working in a team is something I am familiar with. I have worked with angular and similar frameworks such as ionic. I have not worked with python and PostGreSQL before but I am a fast learner and I am used to being around an environment of self learning.</p>
               </div>
             </div>
@@ -398,7 +400,7 @@
                 </div>
                 <div class="member-info">
                   <h4>Neo Seefane</h4>
-                  <span>Chief Executive Officer</span>
+                  <!-- <span>Chief Executive Officer</span> -->
                   <p>I am an inquisitive learner and a creative team player with excellent interpersonal and analytical skills. I have extensive experience with back-end, data structures, and development tools, with a focus on product-oriented designs. I am looking for a position in a growing company where I can apply my extensive knowledge of software design and development to meet the needs of clients while also gaining professional experience.</p>
                 </div>
               </div>
@@ -415,7 +417,7 @@
                 </div>
                 <div class="member-info">
                   <h4>Phadimane Lethabo Lerefolo</h4>
-                  <span>Product Manager</span>
+                  <!-- <span>Product Manager</span> -->
                   <p>I am currently working as a junior software engineer, that will benefit the team since I have an experience with how most things work. I have a knack for learning new programming technologies. I am flexible and I can learn new things fast. I am familiar with technologies that we are planning on using, I have worked different projects with Angular and 1 project with python specifically the flask framework.</p>
                 </div>
               </div>
