--- a/Front-End/Image-Converter/src/app/login/login.component.scss
+++ b/Front-End/Image-Converter/src/app/login/login.component.scss
@@ -91,7 +91,8 @@
       position: absolute;
       transform: translate(-50%,-50%);
       top: 55%;
-      left: 20%;
+      // left: 20%;
+      left: 50%;
       border-radius: 10px;
       backdrop-filter: blur(10px);
       border: 2px solid rgba(255,255,255,0.9);
