--- a/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
+++ b/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
@@ -37,13 +37,13 @@
 </head>
 
 <body>
-    <!-- <style>
+    <style>
         body{
-            background-image:url("assets/img/wallpaper.jpg");
+            background-image:url("assets/img/hero-bg.png");
             background-repeat:no-repeat;
             background-size: cover;
         }
-      </style> -->
+      </style>
 
   <!-- ======= Header ======= -->
   <!-- <header id="header" class="header fixed-top">
