--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -49,14 +49,14 @@
         <mat-icon>track_changes</mat-icon>
         <span>Activity Tracker</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/profile">
+      <!-- <button mat-button class="menu-button" routerLink="/profile">
         <mat-icon>person</mat-icon>
         <span>Profile</span>
       </button>
       <button mat-button class="menu-button" routerLink="/about">
         <mat-icon>info</mat-icon>
         <span>About</span>
-      </button>
+      </button> -->
   
       <mat-divider></mat-divider>
   
