--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -41,7 +41,7 @@
         <mat-icon>history</mat-icon>
         <span>Upload History</span>
       </button>
-      <button mat-button class="menu-button" routerLink="./unrecognzied">
+      <button mat-button class="menu-button" routerLink="./unrecognized">
         <mat-icon>report_problem</mat-icon>
         <span>Unrecognized Images</span>
       </button>
@@ -49,21 +49,21 @@
         <mat-icon>track_changes</mat-icon>
         <span>Activity Tracker</span>
       </button>
-      <!-- <button mat-button class="menu-button" routerLink="/profile">
-        <mat-icon>person</mat-icon>
-        <span>Profile</span>
+      <button mat-button class="menu-button" (click)="onSubmitLogin()">
+        <!-- <mat-icon>person</mat-icon> -->
+        <span>Logout</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/about">
+      <!-- <button mat-button class="menu-button" routerLink="/about">
         <mat-icon>info</mat-icon>
         <span>About</span>
       </button> -->
   
       <mat-divider></mat-divider>
   
-      <button mat-button class="menu-button" routerLink="/help">
+      <!-- <button mat-button class="menu-button" routerLink="/help">
         <mat-icon>help</mat-icon>
         <span>Help</span>
-      </button>
+      </button> -->
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="content mat-elevation-z8">
