--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -1,4 +1,10 @@
-
+<style>
+  body{
+      background-image:url("assets/img/wallpaper.jpg");
+      /* background-repeat:no-repeat;
+      background-size: cover; */
+  }
+</style>
 
 <!-- <mat-toolbar class="mat-elevation-z8">
     <button
