--- a/Front-End/Image-Converter/src/app/nav/nav.component.scss
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.scss
@@ -16,7 +16,7 @@ mat-toolbar {
   
   .content {
     height: calc(100vh - 120px);
-    border-radius: 10px;
+    //border-radius: 10px;
     margin: 16px;
     margin-left: 32px;
   
