--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -1,34 +1,8 @@
-<style>
-  body{
-      background-image:url("assets/img/wallpaper.jpg");
-      /* background-repeat:no-repeat;
-      background-size: cover; */
-  }
-</style>
-
-<!-- <mat-toolbar class="mat-elevation-z8">
-    <button
-      mat-icon-button
-      *ngIf="sidenav.mode === 'over'"
-      (click)="sidenav.toggle()"
-    >
-      <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
-      <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
-    </button>
-    Responsive side navigation
-  </mat-toolbar> -->
+<!-- 
   
   <mat-sidenav-container>
     
     <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
-      <!-- <img
-        class="avatar mat-elevation-z8"
-        src="https://source.unsplash.com/c_GmwfHBDzk/200x200"
-      />
-  
-      <h4 class="name">John Smith</h4>
-      <p class="designation">Software Engineer</p> -->
-  
       <mat-divider></mat-divider> 
   
       <button mat-button class="menu-button" (click)="onSubmitWelcome()">
@@ -56,31 +30,128 @@
         <span>Activity Tracker</span>
       </button>
       <button mat-button class="menu-button" (click)="onSubmitLogin()">
-        <!-- <mat-icon>person</mat-icon> -->
+        
         <span>Logout</span>
       </button>
-      <!-- <button mat-button class="menu-button" routerLink="/about">
-        <mat-icon>info</mat-icon>
-        <span>About</span>
-      </button> -->
+      
   
       <mat-divider></mat-divider>
   
-      <!-- <button mat-button class="menu-button" routerLink="/help">
-        <mat-icon>help</mat-icon>
-        <span>Help</span>
-      </button> -->
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="content mat-elevation-z8">
         <router-outlet></router-outlet>
       </div>
     </mat-sidenav-content>
-  </mat-sidenav-container>
-  <!-- <mat-toolbar class="">
-    
-    Responsive side navigation
-  </mat-toolbar> -->
+  </mat-sidenav-container> -->
+
+  <!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Collapsible sidebar using Bootstrap 4</title>
+
+    <!-- Bootstrap CSS CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!-- Our Custom CSS -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
+
+    <!-- Font Awesome JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>Image-Converter</h3>
+            </div>
+
+            <ul class="list-unstyled components">
+                <!-- <p>Dummy Heading</p> -->
+                <li class="active">
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Upload Image</a>
+                </li>
+                <li>
+                    <a href="#">Draw graph using formulae</a>
+                </li>
+                <li>
+                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" >Upload History</a>
+                    
+                </li>
+                <li>
+                    <a href="#">Unrecognized Images</a>
+                </li>
+                <li>
+                    <a href="#">Activity Tracker</a>
+                </li>
+                <!-- <li>
+                  <a href="#">Log out</a>
+              </li> -->
+            </ul>
+
+            <ul class="list-unstyled components">
+              <li>
+                  <a href="#">Log out</a>
+              </li>
+          </ul>
+
+            <!-- <ul class="list-unstyled CTAs">
+                <li>
+                    <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>
+                </li>
+                <li>
+                    <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>
+                </li>
+            </ul> -->
+        </nav>
+
+        <!-- Page Content  -->
+        
+        
+
+        <div id="content">
+
+            <button type="button" id="sidebarCollapse" class="btn btn-info">
+                <i class="fas fa-align-left"></i>
+                <span>Menu</span>
+            </button>
+            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-align-justify"></i>
+            </button>
+
+
+        </div>
+
+        <div class="content mat-elevation-z8">
+          <router-outlet></router-outlet>
+        </div>
+    </div>
+
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
+            });
+        });
+    </script>
+</body>
+
+</html>
+  
   <footer id="footer" class="footer">
 
     
@@ -90,7 +161,7 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <!-- <img src="assets/img/logo2.png" alt=""> -->
+              
               <span>Image-Converter</span>
             </a>
             <p>In partnership with MathU Teaching Emporium and the COS 301 team</p>
