--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -66,6 +66,13 @@
 </head>
 
 <body>
+  <style>
+    body{
+        background-image:url("assets/img/wallpaper.jpg");
+        /* background-repeat:no-repeat;
+        background-size: cover; */
+    }
+  </style>
     <div class="wrapper">
         <!-- Sidebar  -->
         <nav id="sidebar">
@@ -122,9 +129,9 @@
                 <i class="fas fa-align-left"></i>
                 <span>Menu</span>
             </button>
-            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-align-justify"></i>
-            </button>
+            </button> -->
 
 
         </div>
