side nav routing

--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -86,28 +86,28 @@
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Upload Image</a>
                 </li>
                 <li>
-                    <a href="#">Draw graph using formulae</a>
+                    <a (click)="onSubmitGraphing()">Draw graph using formulae</a>
                 </li>
                 <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" >Upload History</a>
+                    <a (click)="onSubmitHistory()">Upload History</a>
                     
                 </li>
                 <li>
-                    <a href="#">Unrecognized Images</a>
+                    <a (click)="onSubmitUnrecognized()">Unrecognized Images</a>
                 </li>
                 <li>
-                    <a href="#">Activity Tracker</a>
+                    <a (click)="onSubmitTracker()">Activity Tracker</a>
                 </li>
-                <!-- <li>
-                  <a href="#">Log out</a>
-              </li> -->
+                <li>
+                  <a (click)="onSubmitLogin()">Log out</a>
+              </li>
             </ul>
 
-            <ul class="list-unstyled components">
+            <!-- <ul class="list-unstyled components">
               <li>
                   <a href="#">Log out</a>
               </li>
-          </ul>
+          </ul> -->
 
             <!-- <ul class="list-unstyled CTAs">
                 <li>
