--- a/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.scss
+++ b/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.scss
@@ -17,6 +17,7 @@
     margin-top: 50px;
     width: 15%;
     background-color: #2f7fe7;
+    // background-color: #012970;
     color: white;
     padding: 15px 0;
     font-size: 13px;
