--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -183,6 +183,7 @@
             <p>
               <strong>Email:</strong> hardcode8102gmail.com<br>
             </p>
+            <p>Powered by by HardCode</p>
 
           </div>
 
@@ -190,10 +191,10 @@
       </div>
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="credits">
         <p>Powered by by HardCode</p>
       </div>
-    </div>
+    </div> -->
   </footer>
   <!-- End Footer -->
