--- a/Front-End/Image-Converter/src/app/nav/nav.component.scss
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.scss
@@ -75,62 +75,62 @@ mat-toolbar {
     font-size: 14px;
   }
   
-  .footer .footer-newsletter {
-    padding: 50px 0;
-    background: #f6f9ff;
-    border-top: 1px solid #e1ecff;
-  }
+  // .footer .footer-newsletter {
+  //   padding: 50px 0;
+  //   background: #f6f9ff;
+  //   border-top: 1px solid #e1ecff;
+  // }
   
-  .footer .footer-newsletter h4 {
-    font-size: 24px;
-    margin: 0 0 10px 0;
-    padding: 0;
-    line-height: 1;
-    font-weight: 700;
-    color: #012970;
-  }
+  // .footer .footer-newsletter h4 {
+  //   font-size: 24px;
+  //   margin: 0 0 10px 0;
+  //   padding: 0;
+  //   line-height: 1;
+  //   font-weight: 700;
+  //   color: #012970;
+  // }
   
-  .footer .footer-newsletter form {
-    margin-top: 20px;
-    background: #fff;
-    padding: 6px 10px;
-    position: relative;
-    border-radius: 4px;
-    border: 1px solid #e1ecff;
-  }
+  // .footer .footer-newsletter form {
+  //   margin-top: 20px;
+  //   background: #fff;
+  //   padding: 6px 10px;
+  //   position: relative;
+  //   border-radius: 4px;
+  //   border: 1px solid #e1ecff;
+  // }
   
-  .footer .footer-newsletter form input[type=email] {
-    border: 0;
-    padding: 8px;
-    width: calc(100% - 140px);
-  }
+  // .footer .footer-newsletter form input[type=email] {
+  //   border: 0;
+  //   padding: 8px;
+  //   width: calc(100% - 140px);
+  // }
   
-  .footer .footer-newsletter form input[type=submit] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    border: 0;
-    background: none;
-    font-size: 16px;
-    padding: 0 30px;
-    margin: 3px;
-    background: #4154f1;
-    color: #fff;
-    transition: 0.3s;
-    border-radius: 4px;
-  }
+  // .footer .footer-newsletter form input[type=submit] {
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   border: 0;
+  //   background: none;
+  //   font-size: 16px;
+  //   padding: 0 30px;
+  //   margin: 3px;
+  //   background: #4154f1;
+  //   color: #fff;
+  //   transition: 0.3s;
+  //   border-radius: 4px;
+  // }
   
-  .footer .footer-newsletter form input[type=submit]:hover {
-    background: #5969f3;
-  }
+  // .footer .footer-newsletter form input[type=submit]:hover {
+  //   background: #5969f3;
+  // }
   
   .footer .footer-top {
     // background: white url(../img/footer-bg.png) no-repeat right top;
     background-size: contain;
     border-top: 1px solid #e1ecff;
     border-bottom: 1px solid #e1ecff;
-    padding: 60px 0 30px 0;
+    padding: 30px 0 20px 0;
   }
   
   @media (max-width: 992px) {
@@ -145,7 +145,7 @@ mat-toolbar {
   
   .footer .footer-top .footer-info .logo {
     line-height: 0;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
   
   .footer .footer-top .footer-info .logo img {
@@ -154,7 +154,7 @@ mat-toolbar {
   }
   
   .footer .footer-top .footer-info .logo span {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 700;
     letter-spacing: 1px;
     color: #012970;
@@ -230,7 +230,7 @@ mat-toolbar {
   }
   
   .footer .footer-top .footer-contact p {
-    line-height: 26px;
+    line-height: 15px;
   }
   
   .footer .copyright {
@@ -240,7 +240,7 @@ mat-toolbar {
   }
   
   .footer .credits {
-    padding-top: 10px;
+    padding-top: 5px;
     text-align: center;
     font-size: 13px;
     color: #012970;
@@ -373,14 +373,16 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #012970;
+    // color: #2f7fe7;
+    color: #333333;
     background: #fff;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
-    background: #012970;
+    // background: #2f7fe7;
+    background: #333333;
 }
 
 a[data-toggle="collapse"] {
