--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -28,6 +28,30 @@
             background-size: cover; */
         }
       </style>
+
+
+<header id="header" class="header fixed-top">
+  <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+
+    <a href="index.html" class="logo d-flex align-items-center">
+      
+      <span>Image-Converter</span>
+      
+    </a>
+
+    <nav id="navbar" class="navbar">
+      <ul>
+      
+        <p id="accountLink">already have an account?</p>
+        <li><a class="getstarted scrollto" (click)="onSubmitLogin()">Login</a></li>
+         <!-- <a routerLink="/register"  (click)="register()">register</a>  -->
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav>
+    
+
+  </div>
+</header>
         <div id="loginForm">
             <div id="formContent">
                 <div class="background">
