--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -1,51 +1,4 @@
-<!-- 
-  
-  <mat-sidenav-container>
-    
-    <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
-      <mat-divider></mat-divider> 
-  
-      <button mat-button class="menu-button" (click)="onSubmitWelcome()">
-        <mat-icon>home</mat-icon>
-        <span>Home</span>
-      </button>
-      <button  mat-button class="menu-button" routerLink="./upload">
-        <mat-icon>add_photo_alternate</mat-icon>
-        <span>Upload Image</span>
-      </button>
-      <button mat-button class="menu-button" routerLink="./livegraph">
-        <mat-icon>brush</mat-icon>
-        <span>Draw Graph using formulae</span>
-      </button>
-      <button mat-button class="menu-button" routerLink="./uploadHistory">
-        <mat-icon>history</mat-icon>
-        <span>Upload History</span>
-      </button>
-      <button mat-button class="menu-button" routerLink="./unrecognized">
-        <mat-icon>report_problem</mat-icon>
-        <span>Unrecognized Images</span>
-      </button>
-      <button mat-button class="menu-button" routerLink="./activitytracker">
-        <mat-icon>track_changes</mat-icon>
-        <span>Activity Tracker</span>
-      </button>
-      <button mat-button class="menu-button" (click)="onSubmitLogin()">
-        
-        <span>Logout</span>
-      </button>
-      
-  
-      <mat-divider></mat-divider>
-  
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <div class="content mat-elevation-z8">
-        <router-outlet></router-outlet>
-      </div>
-    </mat-sidenav-content>
-  </mat-sidenav-container> -->
-
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -77,7 +30,7 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3 (click)="onSubmitWelcome()">Image-Converter</h3>
+                <h1 (click)="onSubmitWelcome()">Image-Converter</h1>
             </div>
 
             <ul class="list-unstyled components">
@@ -127,13 +80,29 @@
 
             <button type="button" id="sidebarCollapse" class="btn btn-info">
                 <i class="fas fa-align-left"></i>
+                
                 <span>Menu</span>
             </button>
-            <!-- <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-align-justify"></i>
-            </button> -->
+            
+
+            <!-- top navbar -->
+            <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                        <i class="fas fa-align-left"></i>
+                        <span>Toggle Sidebar</span>
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
+
+                </div>
+                
+            </nav> -->
 
 
+            
         </div>
 
         <div class="content mat-elevation-z8">
@@ -181,9 +150,9 @@
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
             <p>
-              <strong>Email:</strong> hardcode8102gmail.com<br>
+              <strong>Email:</strong> hardcode8102gmail.com Powered by by HardCode
             </p>
-            <p>Powered by by HardCode</p>
+          
 
           </div>
 
@@ -191,10 +160,5 @@
       </div>
     </div>
 
-    <!-- <div class="container">
-      <div class="credits">
-        <p>Powered by by HardCode</p>
-      </div>
-    </div> -->
   </footer>
   <!-- End Footer -->
