--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -22,8 +22,8 @@
     <body>
       <style>
         body{
-            background-image:url("assets/img/register-wallpaper6.jpg");
-            /* background-image:url("assets/img/wallpaper.jpg"); */
+            /* background-image:url("assets/img/register-wallpaper6.jpg"); */
+            background-image:url("assets/img/wallpaper.jpg");
             /* background-repeat:no-repeat;
             background-size: cover; */
         }
