changed the welcome back to an amination on login page

--- a/Front-End/Image-Converter/src/app/login/login.component.scss
+++ b/Front-End/Image-Converter/src/app/login/login.component.scss
@@ -119,9 +119,31 @@
     margin-bottom: 5%;
     font-family: 'Didact Gothic';font-size: 42px;
     font-weight: bold;
-
-}
+    
   
+}
+  .welcome{
+  position: relative;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: 2em;
+  letter-spacing: 4px;
+  overflow: hidden;
+  background: linear-gradient(90deg, #000, rgb(0, 0, 0), #000);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 3s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
+}
+@keyframes animate {
+  0% {
+    background-position: -500%;
+  }
+  100% {
+    background-position: 500%;
+  }
+}
   label{
       display: block;
       margin-top: 30px;
