:lipstick:  toolbar implementation

--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -99,7 +99,7 @@
                     <a (click)="onSubmitTracker()"><mat-icon>track_changes</mat-icon> Activity Tracker</a>
                 </li>
                 <li>
-                  <a (click)="onSubmitLogin()">Log out</a>
+                  <a (click)="onSubmitLogin()"><mat-icon>close</mat-icon> Log out</a>
               </li>
             </ul>
 
@@ -125,11 +125,11 @@
 
         <div id="content">
 
-            <button type="button" id="sidebarCollapse" class="btn btn-info">
+            <!-- <button type="button" id="sidebarCollapse" class="btn btn-info">
                 <i class="fas fa-align-left"></i>
                 
                 <span>Menu</span>
-            </button>
+            </button> -->
             
 
             <!-- top navbar -->
