--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
@@ -2279,66 +2279,66 @@
   --------------------------------------------------------------*/
   .footer {
     background: #f6f9ff;
-    padding: 0 0 30px 0;
-    font-size: 14px;
+    padding: 0 0 0px 0;
+    font-size: 12px;
   }
   
-  .footer .footer-newsletter {
-    padding: 50px 0;
-    background: #f6f9ff;
-    border-top: 1px solid #e1ecff;
-  }
+  // .footer .footer-newsletter {
+  //   padding: 50px 0;
+  //   background: #f6f9ff;
+  //   border-top: 1px solid #e1ecff;
+  // }
   
-  .footer .footer-newsletter h4 {
-    font-size: 24px;
-    margin: 0 0 10px 0;
-    padding: 0;
-    line-height: 1;
-    font-weight: 700;
-    color: #012970;
-  }
+  // .footer .footer-newsletter h4 {
+  //   font-size: 24px;
+  //   margin: 0 0 10px 0;
+  //   padding: 0;
+  //   line-height: 1;
+  //   font-weight: 700;
+  //   color: #012970;
+  // }
   
-  .footer .footer-newsletter form {
-    margin-top: 20px;
-    background: #fff;
-    padding: 6px 10px;
-    position: relative;
-    border-radius: 4px;
-    border: 1px solid #e1ecff;
-  }
+  // .footer .footer-newsletter form {
+  //   margin-top: 20px;
+  //   background: #fff;
+  //   padding: 6px 10px;
+  //   position: relative;
+  //   border-radius: 4px;
+  //   border: 1px solid #e1ecff;
+  // }
   
-  .footer .footer-newsletter form input[type=email] {
-    border: 0;
-    padding: 8px;
-    width: calc(100% - 140px);
-  }
+  // .footer .footer-newsletter form input[type=email] {
+  //   border: 0;
+  //   padding: 8px;
+  //   width: calc(100% - 140px);
+  // }
   
-  .footer .footer-newsletter form input[type=submit] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    border: 0;
-    background: none;
-    font-size: 16px;
-    padding: 0 30px;
-    margin: 3px;
-    background: #4154f1;
-    color: #fff;
-    transition: 0.3s;
-    border-radius: 4px;
-  }
+  // .footer .footer-newsletter form input[type=submit] {
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   border: 0;
+  //   background: none;
+  //   font-size: 16px;
+  //   padding: 0 30px;
+  //   margin: 3px;
+  //   background: #4154f1;
+  //   color: #fff;
+  //   transition: 0.3s;
+  //   border-radius: 4px;
+  // }
   
-  .footer .footer-newsletter form input[type=submit]:hover {
-    background: #5969f3;
-  }
+  // .footer .footer-newsletter form input[type=submit]:hover {
+  //   background: #5969f3;
+  // }
   
   .footer .footer-top {
     // background: white url(../img/footer-bg.png) no-repeat right top;
     background-size: contain;
     border-top: 1px solid #e1ecff;
     border-bottom: 1px solid #e1ecff;
-    padding: 60px 0 30px 0;
+    padding: 15px 0 15px 0;
   }
   
   @media (max-width: 992px) {
@@ -2353,16 +2353,16 @@
   
   .footer .footer-top .footer-info .logo {
     line-height: 0;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
   
   .footer .footer-top .footer-info .logo img {
-    max-height: 40px;
+    max-height: 30px;
     margin-right: 6px;
   }
   
   .footer .footer-top .footer-info .logo span {
-    font-size: 30px;
+    font-size: 18px;
     font-weight: 700;
     letter-spacing: 1px;
     color: #012970;
@@ -2371,14 +2371,14 @@
   }
   
   .footer .footer-top .footer-info p {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 24px;
     margin-bottom: 0;
     font-family: "Nunito", sans-serif;
   }
   
   .footer .footer-top .social-links a {
-    font-size: 20px;
+    font-size: 25px;
     display: inline-block;
     color: rgba(1, 41, 112, 0.5);
     line-height: 0;
@@ -2438,7 +2438,7 @@
   }
   
   .footer .footer-top .footer-contact p {
-    line-height: 26px;
+    line-height: 15px;
   }
   
   .footer .copyright {
@@ -2448,7 +2448,7 @@
   }
   
   .footer .credits {
-    padding-top: 10px;
+    padding-top: 5px;
     text-align: center;
     font-size: 13px;
     color: #012970;
