--- a/Front-End/Image-Converter/src/app/register/register.component.scss
+++ b/Front-End/Image-Converter/src/app/register/register.component.scss
@@ -254,16 +254,16 @@ button:disabled {
   // color: #fff;
 }
 
-#reg{
-  // background: #333333;
-  // padding: 8px 20px;
-  // margin-left: 30px;
-  // border-radius: 4px;
-  // color: #fff;
-  // font-family: "Nunito", sans-serif;
-  // font-size: 16px;
-  // font-weight: 700;
-}
+// #reg{
+//   // background: #333333;
+//   // padding: 8px 20px;
+//   // margin-left: 30px;
+//   // border-radius: 4px;
+//   // color: #fff;
+//   // font-family: "Nunito", sans-serif;
+//   // font-size: 16px;
+//   // font-weight: 700;
+// }
 
 #reg:focus,
 #reg:focus:hover{
