--- a/Front-End/Image-Converter/src/app/tracker/tracker.component.html
+++ b/Front-End/Image-Converter/src/app/tracker/tracker.component.html
@@ -2,9 +2,16 @@
     <h1 class="w3-xxxlarge w3-text-black"><b>Activity Tracker</b></h1>
     <hr style="width:50px;border:5px solid black" class="w3-round">
     <img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/>
-    <div id="divChart" width = "400" height = "400">
+    <div id="divChart">
         <canvas id="myChart" ></canvas>
     </div>
     <!-- <p>here</p> -->
+
+    <style>
+        #myChart{
+            width: 300px;
+            height: 400px;
+        }
+    </style>
 
 </div>
