:bug: nav component  display fix

--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -174,8 +174,8 @@
 </body>
 
 </html>
-  
-  <footer id="footer" class="footer">
+ <app-footer></app-footer>
+  <!-- <footer id="footer" class="footer">
 
     
 
@@ -207,5 +207,5 @@
       </div>
     </div>
 
-  </footer>
+  </footer> -->
   <!-- End Footer -->
