:lipstick: Minor UI fix ( labelling )

--- a/Front-End/Image-Converter/src/app/graph-plotting/graph-plotting.component.html
+++ b/Front-End/Image-Converter/src/app/graph-plotting/graph-plotting.component.html
@@ -1,6 +1,6 @@
 <div class="w3-container">
     <br/>
-    <h1 class="w3-xxxlarge w3-text-black" ><b>Draw graph using formulae</b></h1>
+    <h1 class="w3-xxxlarge w3-text-black" ><b>Plot graph using formulae</b></h1>
     <img *ngIf="loading" src="assets/loading.gif" width="400" />  
     <form [formGroup]="form" (ngSubmit)="onFomulaSubmit()"  *ngIf="!loading">
 
