--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -95,7 +95,7 @@
                     <a (click)="onSubmitGraphing()">
                       <button  mat-button class="menu-button" routerLink="./upload">
                         <mat-icon>brush</mat-icon>
-                        <span>Draw Graph using formulae</span>
+                        <span>Plot Graph</span>
                       </button>
                     </a>
                 </li>
