--- a/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
+++ b/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
@@ -100,7 +100,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-box orange">
               <i class="ri-discuss-line icon"></i>
-              <h2>Draw Graph Using Formulae</h2>
+              <h2>Plot Graph</h2>
               <p>This feature allows you to enter the formula of any mathematical function in ordet to dray the graph of that function. Polinomial functions, trigonometric functions, statistical functions and many more types of functions are supported</p>
               <a (click)="onSubmitGraphing()"class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
