--- a/Front-End/Image-Converter/src/app/filter/filter.component.scss
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.scss
@@ -24,3 +24,9 @@
 	height: 400px;
 	display: none;
 }
+
+#imageFilters{
+	margin-top: 10%;
+	margin-left: auto !important;
+    margin-right: auto !important;
+}
