--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -70,6 +70,7 @@
   <style>
     body{
         background-image:url("assets/img/wallpaper.jpg");
+        background-attachment: fixed;
         /* background-repeat:no-repeat;
         background-size: cover; */
     }
