--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -83,7 +83,7 @@
             <ul class="list-unstyled components">
                 <li>
                   <a (click)="onSubmitUpload()">
-                    <button  mat-button class="menu-button" routerLink="./upload">
+                    <button  mat-button class="menu-button">
                       <mat-icon>add_photo_alternate</mat-icon>
                       <span>Upload</span>
                     </button>
@@ -92,15 +92,15 @@
                 </li>
                 <li>
                     <a (click)="onSubmitGraphing()">
-                      <button  mat-button class="menu-button" routerLink="./upload">
+                      <button  mat-button class="menu-button">
                         <mat-icon>brush</mat-icon>
-                        <span>Draw Graph using formulae</span>
+                        <span>Plot Graph</span>
                       </button>
                     </a>
                 </li>
                 <li>
                     <a (click)="onSubmitHistory()">
-                      <button  mat-button class="menu-button" routerLink="./upload">
+                      <button  mat-button class="menu-button">
                         <mat-icon>history</mat-icon>
                         <span>Upload History</span>
                       </button>
@@ -109,7 +109,7 @@
                 </li>
                 <li>
                     <a (click)="onSubmitUnrecognized()">
-                      <button  mat-button class="menu-button" routerLink="./upload">
+                      <button  mat-button class="menu-button">
                         <mat-icon>report_problem</mat-icon>
                         <span>Unrecognized Images</span>
                       </button>
@@ -117,7 +117,7 @@
                 </li>
                 <li>
                     <a (click)="onSubmitTracker()">
-                      <button  mat-button class="menu-button" routerLink="./upload">
+                      <button  mat-button class="menu-button">
                         <mat-icon>track_changes</mat-icon>
                         <span>Activity Tracker</span>
                       </button>
@@ -125,7 +125,7 @@
                 </li>
                 <li>
                   <a (click)="onSubmitLogin()">
-                    <button  mat-button class="menu-button" routerLink="./upload">
+                    <button  mat-button class="menu-button">
                       <mat-icon>logout</mat-icon>
                       <span>Log out</span>
                     </button>
