--- a/Front-End/Image-Converter/src/app/tracker/tracker.component.html
+++ b/Front-End/Image-Converter/src/app/tracker/tracker.component.html
@@ -1,10 +1,12 @@
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
-    <h1 class="w3-xxxlarge w3-text-black"><b>Activity Tracker</b></h1>
-    <hr style="width:50px;border:5px solid black" class="w3-round">
+    <h1 class="text-heading"><b>Activity Tracker</b></h1>
+    <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
     <img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/>
     <div id="divChart" width = "400" height = "400">
         <canvas id="myChart" ></canvas>
     </div>
     <!-- <p>here</p> -->
+
+
 
 </div>
