--- a/Front-End/Image-Converter/src/app/upload-history/upload-history.component.html
+++ b/Front-End/Image-Converter/src/app/upload-history/upload-history.component.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
-   <h1 class="w3-xxxlarge w3-text-black"><b>Upload History</b></h1>
-   <hr style="width:50px;border:5px solid black" class="w3-round">
+   <h1 class="text-heading"><b>Upload History</b></h1>
+   <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
 
     <!-- <h1>Recent Uploads</h1> -->
    <img *ngIf="loading" src="assets/loading.gif" width="400" />
