--- a/Front-End/Image-Converter/src/app/upload-history/upload-history.component.scss
+++ b/Front-End/Image-Converter/src/app/upload-history/upload-history.component.scss
@@ -1,3 +1,8 @@
+.text-heading{
+    font-size:  50px;
+    text-decoration: underline;
+    padding-bottom: 20px;
+  }
 #uploaded{
     padding:30px;
     height:260px;
