--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -1,7 +1,7 @@
 
         <div class="w3-container" id="uploadHistory" style="margin-top:5px">
-          <h1 class="w3-xxxlarge w3-text-black"><b>Upload image</b></h1>
-          <hr style="width:50px;border:5px solid black" class="w3-round">
+          <h1 class="text-heading"><b>Upload Image</b></h1>
+          <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
         </div>
         <img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/>
         <mat-card id="uploadcard" *ngIf="!loading" class="card" draggable="true" ngClass="{{ dragAreaClass }}">
