--- a/Front-End/Image-Converter/src/app/converter/converter.component.scss
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.scss
@@ -1,3 +1,8 @@
+.text-heading{
+  font-size:  50px;
+  text-decoration: underline;
+  padding-bottom: 20px;
+}
 #uploadcard {
     max-width: 400px;
     margin-left: auto;
