--- a/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.html
+++ b/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.html
@@ -1,6 +1,6 @@
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
-    <h1 class="w3-xxxlarge w3-text-black"><b>Draw graph using formulae</b></h1>
-    <hr style="width:50px;border:5px solid black" class="w3-round">
+    <h1 class="text-heading"><b>Plot Graph</b></h1>
+    <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
 </div>
 
 <div id="calculator" style="width: 800px; height: 400px;"></div>
