--- a/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.scss
+++ b/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.scss
@@ -1,3 +1,9 @@
+.text-heading{
+  font-size:  50px;
+  text-decoration: underline;
+  padding-bottom: 20px;
+}
+
 #screenshot{
   width: 15%;
   height: 5%;
