--- a/Front-End/Image-Converter/src/app/nav/nav.component.scss
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.scss
@@ -332,6 +332,15 @@ a:focus {
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
+// ::ng-deep{
+//   mat-icon {
+//        font-size: 24px;
+//        color: #3b86ff;
+//      }
+// }
+span{
+  font-size: medium;
+}
 
 .wrapper {
     display: flex;
@@ -381,7 +390,7 @@ a:focus {
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
-    // background: #2f7fe7;
+    background: #2f7fe7;
     background: #333333;
 }
 
