--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
@@ -33,7 +33,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- <img src="assets/img/logo2.png" alt=""> -->
+        <img src="assets/img/logos.png" alt="">
         <span>Image-Converter</span>
       </a>
 
@@ -266,7 +266,7 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              
+              <!-- <img src="assets/img/Image-Converter-logos.jpeg" alt=""> -->
               <span>Image-Converter</span>
             </a>
             <p>In partnership with MathU Teaching Emporium and the COS 301 team</p>
