--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
@@ -173,7 +173,7 @@
   .header {
     transition: all 0.5s;
     z-index: 997;
-    padding: 20px 0;
+    padding: 5px 0;
     // background-color: rgb(190, 185, 185);
     background-color: #fff;
     box-shadow: 0px 0 30px rgba(1, 41, 112, 0.7);
@@ -190,8 +190,10 @@
   }
   
   .header .logo img {
-    max-height: 40px;
-    margin-right: 6px;
+    // max-height: 40px;
+    // margin-right: 6px;
+    height:60px;
+    width: 60px;
   }
   
   .header .logo span {
