--- a/Front-End/Image-Converter/src/app/login/login.component.html
+++ b/Front-End/Image-Converter/src/app/login/login.component.html
@@ -33,7 +33,7 @@
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
     
           <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo2.png" alt="">
+            <img src="assets/img/logos.png" alt="">
             <span>Image-Converter</span>
           </a>
     
