--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -34,7 +34,7 @@
   <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
     <a href="index.html" class="logo d-flex align-items-center">
-      
+      <img src="assets/img/logos.png" alt="">
       <span>Image-Converter</span>
       
       
