--- a/Front-End/Image-Converter/src/app/register/register.component.scss
+++ b/Front-End/Image-Converter/src/app/register/register.component.scss
@@ -153,7 +153,7 @@ button:disabled {
 .header {
   transition: all 0.5s;
   z-index: 997;
-  padding: 20px 0;
+  padding: 5px 0;
   // background-color: rgb(190, 185, 185);
   // background-color: #fff;
   background-color: rgba(255,255,255,1);
@@ -171,8 +171,8 @@ button:disabled {
 }
 
 .header .logo img {
-  max-height: 40px;
-  margin-right: 6px;
+  height:60px;
+  width: 60px;
 }
 
 .header .logo span {
